# Paper_A1-JOSIF-Linkage

./: README.md  __main__.py  main.py  pyproject.toml
linkage/: __init__.py  linkage.py  preprocess.py
linkage/linkage/: linkage.py
linkage/preprocessing/: preprocess.py
output/: SIMORTN.parquet.gzip
