[project]
name = "paper-a-josif-linkage"
version = "0.1.0"
description = ""
authors = [
    {name = "morsoletodev",email = "106322393+morsoletodev@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "recordlinkage (>=0.16,<0.17)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
